--- a/package.json
+++ b/package.json
@@ -24,12 +24,14 @@
     "geist": "^1.3.0",
     "lucide-react": "^0.408.0",
     "next": "^14.2.4",
+    "next-auth": "^4.24.7",
     "next-themes": "^0.3.0",
     "postgres": "^3.4.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "tailwind-merge": "^2.4.0",
     "tailwindcss-animate": "^1.0.7",
+    "uuid": "^10.0.0",
     "zod": "^3.23.3"
   },
   "devDependencies": {
@@ -37,6 +39,7 @@
     "@types/node": "^20.14.10",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
+    "@types/uuid": "^10.0.0",
     "@typescript-eslint/eslint-plugin": "^7.1.1",
     "@typescript-eslint/parser": "^7.1.1",
     "drizzle-kit": "^0.21.4",
