--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "start": "next start"
   },
   "dependencies": {
+    "@hookform/resolvers": "^3.9.0",
     "@radix-ui/react-dropdown-menu": "^2.1.1",
+    "@radix-ui/react-label": "^2.1.0",
     "@radix-ui/react-slot": "^1.1.0",
     "@t3-oss/env-nextjs": "^0.10.1",
     "@vercel/postgres": "^0.9.0",
@@ -29,10 +31,11 @@
     "postgres": "^3.4.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-hook-form": "^7.52.1",
     "tailwind-merge": "^2.4.0",
     "tailwindcss-animate": "^1.0.7",
     "uuid": "^10.0.0",
-    "zod": "^3.23.3"
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@types/eslint": "^8.56.10",
@@ -55,5 +58,5 @@
   "ct3aMetadata": {
     "initVersion": "7.36.1"
   },
-  "packageManager": "npm@10.8.2"
+  "packageManager": "pnpm@9.6.0"
 }
