--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "clsx": "^2.1.1",
     "drizzle-orm": "^0.30.10",
     "geist": "^1.3.0",
+    "input-otp": "^1.2.4",
     "lucide-react": "^0.408.0",
     "next": "^14.2.4",
     "next-auth": "^4.24.7",
