--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@radix-ui/react-slot": "^1.1.0",
     "@t3-oss/env-nextjs": "^0.10.1",
     "@tanstack/react-query": "^5.51.15",
+    "@uploadthing/react": "^6.7.2",
     "@vercel/postgres": "^0.9.0",
     "axios": "^1.7.2",
     "bcrypt": "^5.1.1",
@@ -41,6 +42,7 @@
     "react-hook-form": "^7.52.1",
     "tailwind-merge": "^2.4.0",
     "tailwindcss-animate": "^1.0.7",
+    "uploadthing": "^6.13.2",
     "uuid": "^10.0.0",
     "zod": "^3.23.8"
   },
