--- a/package.json
+++ b/package.json
@@ -1,76 +1,76 @@
 {
-  "name": "expense_tracker",
-  "version": "0.1.0",
-  "private": true,
-  "type": "module",
-  "scripts": {
-    "build": "next build",
-    "db:generate": "drizzle-kit generate",
-    "db:migrate": "drizzle-kit migrate",
-    "db:push": "drizzle-kit push",
-    "db:studio": "drizzle-kit studio",
-    "dev": "next dev --turbo",
-    "lint": "next lint",
-    "start": "next start"
-  },
-  "dependencies": {
-    "@heroicons/react": "^2.1.5",
-    "@hookform/resolvers": "^3.9.0",
-    "@radix-ui/react-alert-dialog": "^1.1.1",
-    "@radix-ui/react-avatar": "^1.1.0",
-    "@radix-ui/react-dialog": "^1.1.1",
-    "@radix-ui/react-dropdown-menu": "^2.1.1",
-    "@radix-ui/react-label": "^2.1.0",
-    "@radix-ui/react-slot": "^1.1.0",
-    "@radix-ui/react-toast": "^1.2.1",
-    "@t3-oss/env-nextjs": "^0.10.1",
-    "@tanstack/react-query": "^5.51.15",
-    "@uploadthing/react": "^6.7.2",
-    "@vercel/postgres": "^0.9.0",
-    "axios": "^1.7.2",
-    "bcrypt": "^5.1.1",
-    "class-variance-authority": "^0.7.0",
-    "clsx": "^2.1.1",
-    "drizzle-orm": "^0.30.10",
-    "geist": "^1.3.0",
-    "input-otp": "^1.2.4",
-    "lucide-react": "^0.408.0",
-    "next": "^14.2.4",
-    "next-auth": "^4.24.7",
-    "next-themes": "^0.3.0",
-    "nodemailer": "^6.9.14",
-    "postgres": "^3.4.4",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
-    "react-hook-form": "^7.52.1",
-    "tailwind-merge": "^2.4.0",
-    "tailwindcss-animate": "^1.0.7",
-    "uploadthing": "^6.13.2",
-    "uuid": "^10.0.0",
-    "zod": "^3.23.8"
-  },
-  "devDependencies": {
-    "@types/bcrypt": "^5.0.2",
-    "@types/eslint": "^8.56.10",
-    "@types/node": "^20.14.10",
-    "@types/nodemailer": "^6.4.15",
-    "@types/react": "^18.3.3",
-    "@types/react-dom": "^18.3.0",
-    "@types/uuid": "^10.0.0",
-    "@typescript-eslint/eslint-plugin": "^7.1.1",
-    "@typescript-eslint/parser": "^7.1.1",
-    "drizzle-kit": "^0.21.4",
-    "eslint": "^8.57.0",
-    "eslint-config-next": "^14.2.4",
-    "eslint-plugin-drizzle": "^0.2.3",
-    "postcss": "^8.4.39",
-    "prettier": "^3.3.2",
-    "prettier-plugin-tailwindcss": "^0.6.5",
-    "tailwindcss": "^3.4.3",
-    "typescript": "^5.5.3"
-  },
-  "ct3aMetadata": {
-    "initVersion": "7.36.1"
-  },
-  "packageManager": "pnpm@9.6.0"
+    "name": "expense_tracker",
+    "version": "0.1.0",
+    "private": true,
+    "type": "module",
+    "scripts": {
+        "build": "next build",
+        "db:generate": "drizzle-kit generate",
+        "db:migrate": "drizzle-kit migrate",
+        "db:push": "drizzle-kit push",
+        "db:studio": "drizzle-kit studio",
+        "dev": "next dev ",
+        "lint": "next lint",
+        "start": "next start"
+    },
+    "dependencies": {
+        "@heroicons/react": "^2.1.5",
+        "@hookform/resolvers": "^3.9.0",
+        "@radix-ui/react-alert-dialog": "^1.1.1",
+        "@radix-ui/react-avatar": "^1.1.0",
+        "@radix-ui/react-dialog": "^1.1.1",
+        "@radix-ui/react-dropdown-menu": "^2.1.1",
+        "@radix-ui/react-label": "^2.1.0",
+        "@radix-ui/react-slot": "^1.1.0",
+        "@radix-ui/react-toast": "^1.2.1",
+        "@t3-oss/env-nextjs": "^0.10.1",
+        "@tanstack/react-query": "^5.51.15",
+        "@uploadthing/react": "^6.7.2",
+        "@vercel/postgres": "^0.9.0",
+        "axios": "^1.7.2",
+        "bcrypt": "^5.1.1",
+        "class-variance-authority": "^0.7.0",
+        "clsx": "^2.1.1",
+        "drizzle-orm": "^0.30.10",
+        "geist": "^1.3.0",
+        "input-otp": "^1.2.4",
+        "lucide-react": "^0.408.0",
+        "next": "^14.2.4",
+        "next-auth": "^4.24.7",
+        "next-themes": "^0.3.0",
+        "nodemailer": "^6.9.14",
+        "postgres": "^3.4.4",
+        "react": "^18.3.1",
+        "react-dom": "^18.3.1",
+        "react-hook-form": "^7.52.1",
+        "tailwind-merge": "^2.4.0",
+        "tailwindcss-animate": "^1.0.7",
+        "uploadthing": "^6.13.2",
+        "uuid": "^10.0.0",
+        "zod": "^3.23.8"
+    },
+    "devDependencies": {
+        "@types/bcrypt": "^5.0.2",
+        "@types/eslint": "^8.56.10",
+        "@types/node": "^20.14.10",
+        "@types/nodemailer": "^6.4.15",
+        "@types/react": "^18.3.3",
+        "@types/react-dom": "^18.3.0",
+        "@types/uuid": "^10.0.0",
+        "@typescript-eslint/eslint-plugin": "^7.1.1",
+        "@typescript-eslint/parser": "^7.1.1",
+        "drizzle-kit": "^0.21.4",
+        "eslint": "^8.57.0",
+        "eslint-config-next": "^14.2.4",
+        "eslint-plugin-drizzle": "^0.2.3",
+        "postcss": "^8.4.39",
+        "prettier": "^3.3.2",
+        "prettier-plugin-tailwindcss": "^0.6.5",
+        "tailwindcss": "^3.4.3",
+        "typescript": "^5.5.3"
+    },
+    "ct3aMetadata": {
+        "initVersion": "7.36.1"
+    },
+    "packageManager": "pnpm@9.6.0"
 }
